# codebase-analyzer

./: .gitignore  README.md  pyproject.toml
src/: .env  agent.py  run.py  state.py  summary_generator.py
src/agents/: summary_generator.py
src/nodes/: analyzer.py  analyzing.py  extracting.py  extractor.py  reporter.py  reporting.py
src/prompts/: templates.py
src/state/: code_analysis.py
src/utils/: clients.py  codebase_analyzer.py  graph_builder.py  tools.py
tests/: test_graph_builder.py
